# haskell-interop-prime

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  haskell-interop-prime.cabal  purescript-interop-prime.cabal  stack.yaml
assets/: bower.json
src/Haskell/Interop/: Prime.hs
src/Haskell/Interop/Prime/: Api.hs  Convert.hs  Internal.hs  Misc.hs  Options.hs  Shared.hs  Template.hs  Test.hs  Types.hs
src/Haskell/Interop/Prime/Test/: Internal.hs  Types.hs
src/Purescript/Interop/: Prime.hs
src/Purescript/Interop/Prime/: Internal.hs  Misc.hs  Options.hs  Template.hs  Test.hs  Types.hs
