name:                haskell-interop-prime
version:             0.1.0.0
synopsis:            Experimental tool to help me serialize data types between haskell and other languages
description:
  This library is based heavily off of https://github.com/pkamenarsky/purescript-interop. A great many
  thanks to Philip Kamenarsky. I was going to contribute to his library but, there's just way too many
  changes at this point. The basic idea is this: I want to write my data types in Haskell, then generate
  JSON instances for Haskell, equivalent types & JSON instances for other languages, and potentially even
  API hooks. Without a library like this, I find myself spending way too much time duplicating my efforts
  by writing the same types & JSON instances for both haskell and purescript.

  This library is extremely experimental.
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Interop.Prime
                     , Haskell.Interop.Prime.Internal
                     , Haskell.Interop.Prime.Misc
                     , Haskell.Interop.Prime.Options
                     , Haskell.Interop.Prime.Template
                     , Haskell.Interop.Prime.Types
  other-modules:       Haskell.Interop.Prime.Test
  other-extensions:    DeriveDataTypeable
                     , OverloadedStrings
                     , TemplateHaskell
  build-depends:       base                >=4.8      &&  <4.9
                     , aeson               >=0.9      &&  <0.10
                     , bytestring          >=0.10     &&  <0.11
                     , containers          >= 0.5.6.0 &&  < 0.6.0.0
                     , hashable            >=1.2      &&  <1.3
                     , restyle             >= 0.1.0   &&  < 0.2
                     , template-haskell    >=2.10     &&  <2.11
                     , transformers        >= 0.4.2   &&  < 0.5
  hs-source-dirs:      src
  default-language:    Haskell98
